--- a/Responsive Portfolio/css/main.css
+++ b/Responsive Portfolio/css/main.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0px;
   width: 100%;
   height: 100%;
@@ -20,7 +20,7 @@ header, nav, footer, section, article, div {
   margin: 0px;
 }
 
-.project-image{
+.project-image {
   display:block;
   margin: 0px;
   width: 80%;
@@ -29,27 +29,33 @@ header, nav, footer, section, article, div {
   max-height:80%;
 }
 
-section{
+.main-content-udacity-told-me-i-could-not-leave-a-section-not-labeled {
   margin-top: 15px;
 }
 
-.featured-work{
+.featured-work {
   margin-top: 10px;
   width: 100%;
 }
 
-.project-1, .project-2, .project-3{
+.project-1, .project-2, .project-3 {
   margin-top: 10px;
 }
 
-.border{
+.border {
   border: 2px #02b3e4 solid;
   width: 100%;
 }
 
+p {
+  text-align: center;
+  opacity: 50%;
+  font-family: fantasy;
+}
+
 /*Nexus 5 is 360x640
 */
-@media screen and (max-width: 640px){
+@media screen and (max-width: 640px) {
   header{
     width:100%;
     display: flex;
@@ -60,35 +66,44 @@ section{
 
   .header-logo {
     height: 40px;
-    margin: 0.5em;
+    margin: 0.7em;
   }
 
   h1 {
     font-size: 2em;
     text-align: right;
+    margin-right: 10px;
   }
 
   h2 {
     font-size: 1em;
     text-align: right;
+    margin-right: 10px;
   }
 
-  #me-liam{
+  #me-liam {
     width: 100%;
   }
 
-  .featured-work{
+  h3 {
     color:#7d97ad;
     width: 100%;
-    display: flex;
+    text-align: center;
   }
 
-  .project-image{
-    display:block;
+  .project-image {
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 100px;
+    max-height: 300px;
+  }
+
+  .project-1, .project-2, .project-3 {
+    display:border-box;
     width: 100%;
   }
 
-  .project-title{
+  .project-title {
     text-align: center;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -97,9 +112,10 @@ section{
 
 /*iPad is 768x1024
 */
-@media screen and (min-width: 641px) and (max-width: 800px){
+@media screen and (min-width: 641px) and (max-width: 800px) {
   header {
     width:100%;
+    margin: auto;
     display: flex;
     border-bottom: solid;
     border-color: #2d3c49;
@@ -113,15 +129,17 @@ section{
 
   h1 {
     font-size: 3em;
+    margin-right: 20px;
   }
 
   h2 {
     font-size: 2em;
     text-align: right;
+    margin-right: 20px;
   }
 
   #me-liam {
-    max-width: 95%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     order: 0;
@@ -141,50 +159,49 @@ section{
     font-size: 2em;
   }
 
-  .featured-work{
-    display: flex;
-  }
+  .project-image {
+      margin-left: auto;
+      margin-right: auto;
+      min-height: 250px;
+    }
 
-  .project-1{
-    order: 3;
+  .project-1, .project-2, .project-3 {
     width: 33.33%;
   }
 
-  .project-2{
-    order: 4;
-    width: 33.33%;
-  }
-
-  .project-3{
-    order: 5;
-    width: 33.33%;
-  }
-
-  .project-title{
+  .project-title {
     text-align: center;
   }
+
+  /*
+  .footer {
+  }
+  */
 }
+
+
 
 /*Desktop and horizontal tablets
 */
 @media screen and (min-width: 801px){
-  header{
+  header {
     width:100%;
+    max-width: 1000px;
+    border-bottom: 4px #2d3c49 solid;
+    justify-content: space-between;
     display: flex;
-    margin:auto;
-    border-bottom: solid;
-    border-color: #2d3c49;
-    justify-content: space-around;
-    padding: 1em;
+    margin: auto;
   }
 
   .header-logo {
-    max-height: 100px;
+    max-height: 180px;
     margin: 1.5em;
   }
 
   h1 {
+    margin-top: 20px;
     font-size: 5em;
+    text-align: right;
   }
 
   h2 {
@@ -192,13 +209,20 @@ section{
     text-align: right;
   }
 
-  #me-liam{
+  main {
     display: flex;
-    width: 95%;
-    max-width: 100%;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
+
+  #me-liam {
+    min-width: 700px;
     margin-left: auto;
     margin-right: auto;
-    order:0;
+    text-align: center;
+    display: block;
   }
 
   h3 {
@@ -209,27 +233,31 @@ section{
     text-align: center;
   }
 
-  .featured-work{
+  .featured-work {
     display: flex;
+    max-width: 1200px;
+    flex-wrap: wrap;
+    width: 100%;
   }
 
-  .project-1{
-    order: 3;
-    width:33.33%;
+  .project-image {
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 350px;
   }
 
-  .project-2{
-    order: 4;
-    width:33.33%;
-  }
-
-  .project-3{
-    order: 5;
-    width:33.33%;
+  .project-1, .project-2, .project-3 {
+   width: 33.33%;
+   max-height: 400px
   }
 
   .project-title{
     text-align: center;
     font-size: 1.5em;
+  }
+
+  .footer {
+    margin-top: 40px;
+    font-size: 2em;
   }
 }
